chore(minnaker): Turn on artifactRewrite feature

--- a/templates/config-seed.yml
+++ b/templates/config-seed.yml
@@ -27,6 +27,7 @@ deploymentConfigurations:
       secretAccessKey: MINIO_PASSWORD
   features:
     artifacts: true
+    artifactsRewrite: true
   security:
     apiSecurity:
       ssl:
