--- a/templates/minio-with-pvc.yml
+++ b/templates/minio-with-pvc.yml
@@ -1,4 +1,18 @@
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: minio-pvc
+  labels:
+    app: minio
+  namespace: spinnaker
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -32,11 +46,14 @@ spec:
         volumeMounts:
         - name: storage
           mountPath: "/storage"
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 65535
+        fsGroup: 65535
       volumes:
       - name: storage
-        hostPath:
-          path: BASE_DIR/minio
-          type: DirectoryOrCreate
+        persistentVolumeClaim:
+          claimName: minio-pvc
 ---
 apiVersion: v1
 kind: Service
