chore(minnaker): Add extra output, modify gate-local.yml

--- a/templates/profiles/gate-local-linux.yml
+++ b/templates/profiles/gate-local-linux.yml
@@ -1,7 +1,10 @@
 
+spring:
+  security:
+    user:
+      name: admin
+      password: SPINNAKER_PASSWORD
+
 security:
   basicform:
     enabled: true
-  user:
-    name: admin
-    password: SPINNAKER_PASSWORD
