--- a/templates/archive/mariadb-without-pvc.yml
+++ b/templates/archive/mariadb-without-pvc.yml
@@ -1,17 +1,5 @@
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mariadb-pvc
-  labels:
-    app: mariadb
-  namespace: spinnaker
-spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 4Gi
+# This is currently not used
+# Do not use this, permissions are not currently set up correctly
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -36,19 +24,18 @@ spec:
         - name: mysql
           mountPath: "/var/lib/mysql"
         env:
+        # - name: HOME
+        #   value: "/home/spinnaker"
         - name: MYSQL_ROOT_PASSWORD
-          value: "MARIADB_PASSWORD"
+          value: "MYSQL_PASSWORD"
         ports:
         - containerPort: 3306
           protocol: TCP
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 65535
-        fsGroup: 65535
       volumes:
       - name: mysql
-        persistentVolumeClaim:
-          claimName: mariadb-pvc
+        hostPath:
+          path: BASE_DIR/mysql
+          type: DirectoryOrCreate
 ---
 apiVersion: v1
 kind: Service
