--- a/templates/manifests/spinnaker-default-clusteradmin-clusterrolebinding.yml
+++ b/templates/manifests/spinnaker-default-clusteradmin-clusterrolebinding.yml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: spinnaker-default-admin
+  name: NAMESPACE-default-admin
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -10,4 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: spinnaker
+  namespace: NAMESPACE
