chore(minnaker): Refactor everything
Refactor of the entire installation structure, for easier maintenance:
* separation of install.sh and osx_install.sh

--- a/templates/manifests/minio.yml
+++ b/templates/manifests/minio.yml
@@ -5,7 +5,7 @@ metadata:
   name: minio-pvc
   labels:
     app: minio
-  namespace: spinnaker
+  namespace: NAMESPACE
 spec:
   accessModes:
   - ReadWriteOnce
@@ -17,7 +17,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: minio
-  namespace: spinnaker
+  namespace: NAMESPACE
 spec:
   replicas: 1
   serviceName: minio
@@ -59,7 +59,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: minio
-  namespace: spinnaker
+  namespace: NAMESPACE
 spec:
   ports:
     - port: 9000
