Update Spinnaker Operator

--- a/operator/deploy/clusterrole.yaml
+++ b/operator/deploy/clusterrole.yaml
@@ -80,3 +80,12 @@ rules:
   - validatingwebhookconfigurations
   verbs:
   - '*'
+- apiGroups:
+    - networking.k8s.io
+    - extensions
+  resources:
+    - ingresses
+  verbs:
+    - get
+    - list
+    - watch
