--- a/operator/deploy/deployment.yaml
+++ b/operator/deploy/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: spinnaker-operator
+  namespace: spinnaker-operator
 spec:
   replicas: 1
   selector:
