k8s acct back to spinnaker

--- a/pipelines/k8s-deploy.yaml
+++ b/pipelines/k8s-deploy.yaml
@@ -12,7 +12,7 @@ spec:
         name: Deploy text manifest
         refId: "1"
         requisiteStageRefIds: [ ]
-        account: spin-sa
+        account: spinnaker
         cloudProvider: kubernetes
         moniker:
           app: my-first-k8s-app
