chaning app name

--- a/pipelines/sample-app.yaml
+++ b/pipelines/sample-app.yaml
@@ -2,7 +2,7 @@
 apiVersion: pacrd.armory.spinnaker.io/v1alpha1
 kind: Application
 metadata:
-  name: pacrd-pipeline-stages-samples
+  name: armory-sample
 spec:
   email: test@armory.io
   description: Description
