ref id messed up, fixed

--- a/pipelines/sample-pipe.yaml
+++ b/pipelines/sample-pipe.yaml
@@ -16,8 +16,8 @@ spec:
     - type: deployManifest
       properties:
         name: Deploy text manifest
-        refId: "1"
-        requisiteStageRefIds: [ ]
+        refId: "2"
+        requisiteStageRefIds: [ 1 ]
         account: spinnaker
         cloudProvider: kubernetes
         moniker:
