--- a/pipelines/sample-pipe.yaml
+++ b/pipelines/sample-pipe.yaml
@@ -9,7 +9,7 @@ spec:
   stages:
     - type: manualJudgment
       properties:
-        name: Manual example
+        name: Slack Chat Ops Approval
         refId: "1"
         failPipeline: true
         instructions: "Click Here ->  <a href=http://a594ebf7154144c8b840a5004b8ed253-1521180453.us-west-2.elb.amazonaws.com/productpage>Test App</a>   ---  Refresh App to See Change! <p><b>Select DropDown Option click \"Continue\"</b></p>"
