--- a/pipelines/armory-basic-k8s-pipe.yaml
+++ b/pipelines/armory-basic-k8s-pipe.yaml
@@ -4,7 +4,7 @@ kind: Pipeline
 metadata:
   name: basic-deploy-to-kubernetes
 spec:
-  description: Basic nginx deploy to k8s 
+  description: Basic nginx deploy to K3s
   application: &app-name armory-samples
   stages:
     - type: manualJudgment
