--- a/pipelines/kustomization.yaml
+++ b/pipelines/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - armory-basic-k8s-pipe.yaml
   - armory-jenkins.yaml
   - armory-github.yaml
+  - armory-slack.yaml
 #patchesStrategicMerge:
 #  - patch.yaml
 #namespace: spinnaker  # Note: you should change this value if you are _not_ deploying into the `spinnaker` namespace.
