--- a/pipelines/armory-basic-k8s-pipe.yaml
+++ b/pipelines/armory-basic-k8s-pipe.yaml
@@ -12,7 +12,7 @@ spec:
         name: Slack Chat Ops Approval
         refId: "1"
         failPipeline: true
-        instructions: "Click Here ->  <a href=http://a594ebf7154144c8b840a5004b8ed253-1521180453.us-west-2.elb.amazonaws.com/productpage>Test App</a>   ---  Refresh App to See Change! <p><b>Select DropDown Option click \"Continue\"</b></p>"
+        instructions: "Click Here ->  <a href=http://a594ebf7154144c8b840a5004b8ed253-1521180453.us-west-2.elb.amazonaws.com/productpage>Connect to Deployment Cluster?</a><p><b>Watch Video and Configure Armory Agent</b></p>"
     - type: deployManifest
       properties:
         name: Deploy text manifest
