--- a/pipelines/armory-github.yaml
+++ b/pipelines/armory-github.yaml
@@ -12,4 +12,4 @@ spec:
         name: Slack Chat Ops Approval
         refId: "1"
         failPipeline: true
-        instructions: "Click Here ->  <a href=http://a594ebf7154144c8b840a5004b8ed253-1521180453.us-west-2.elb.amazonaws.com/productpage>Test App</a>   ---  Refresh App to See Change! <p><b>Select DropDown Option click \"Continue\"</b></p>"
+        instructions: "Click Here ->  <a href=http://a594ebf7154144c8b840a5004b8ed253-1521180453.us-west-2.elb.amazonaws.com/productpage>Configure Github</a><p><b>Watch Video and connect Github</b></p>"
