--- a/pipelines/armory-slack.yaml
+++ b/pipelines/armory-slack.yaml
@@ -9,7 +9,7 @@ spec:
   stages:
     - type: manualJudgment
       properties:
-        name: Slack Chat Ops Approval
+        name: Configure Slack Integration
         refId: "1"
         failPipeline: true
         instructions: "Click Here ->  <a href=http://a594ebf7154144c8b840a5004b8ed253-1521180453.us-west-2.elb.amazonaws.com/productpage>Configure Slack</a><p><b>Watch Video and Configure Slack</b></p>"
