add default namespaces for pipelines

--- a/pipelines/kustomization.yaml
+++ b/pipelines/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
   - armory-jenkins.yaml
   - armory-github.yaml
   - armory-slack.yaml
+  - bootstrap.yaml
+  - namespaces.yaml
 #patchesStrategicMerge:
 #  - patch.yaml
 #namespace: spinnaker  # Note: you should change this value if you are _not_ deploying into the `spinnaker` namespace.
