update(pipelines): add more pipelines (#84)
* Adding initial pipelines

* changing k8s acct

* k8s acct back to spinnaker

* fixing structure

* adding yaml

* chaning app name

* adding mj

* adding instruction to mj

* ref id messed up, fixed

* double quotes missing

* testing comments

* adding mj chatops name

* changing name

* bad name

* new pipelines and changed names

* lowercase names

* all names lower case

* better instruction

* added slack

* slack is wack

* custom links

* better user experience

* love thy users

* changed message

* adding bootstramp.yml

* adding aws app

* fixing links

Co-authored-by: Chad Tripod <chadtripod@Chads-MBP.hsd1.ca.comcast.net>
Co-authored-by: Chad Tripod <chad@armory.io>
Co-authored-by: Andrew Way <andrew.way@armory.io>

--- a/pipelines/armory-slack.yaml
+++ b/pipelines/armory-slack.yaml
@@ -12,4 +12,5 @@ spec:
         name: Configure Slack Integration
         refId: "1"
         failPipeline: true
-        instructions: "Click Here ->  <a href=http://a594ebf7154144c8b840a5004b8ed253-1521180453.us-west-2.elb.amazonaws.com/productpage>Configure Slack</a><p><b>Watch Video and Configure Slack</b></p>"
+        instructions: "Click Here ->  <a href=https://docs.armory.io/docs/armory-admin/notifications-slack-configure/>Configure Slack</a><p><b>Watch Video and Configure Slack</b></p>"
+
