--- a/templates/addons/traefik2/traefik2.yml
+++ b/templates/addons/traefik2/traefik2.yml
@@ -4,6 +4,7 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: traefik
+  namespace: kube-system
   labels:
     app.kubernetes.io/name: traefik
     helm.sh/chart: traefik-9.18.2
@@ -16,6 +17,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: traefik
+  namespace: kube-system
   labels:
     app.kubernetes.io/name: traefik
     helm.sh/chart: traefik-9.18.2
@@ -70,6 +72,7 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: traefik
+  namespace: kube-system
   labels:
     app.kubernetes.io/name: traefik
     helm.sh/chart: traefik-9.18.2
@@ -88,6 +91,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: traefik
+  namespace: kube-system
   labels:
     app.kubernetes.io/name: traefik
     helm.sh/chart: traefik-9.18.2
@@ -148,6 +152,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: traefik
+  namespace: kube-system
   labels:
     app.kubernetes.io/name: traefik
     helm.sh/chart: traefik-9.18.2
@@ -268,6 +273,7 @@ items:
     kind: Service
     metadata:
       name: traefik
+      namespace: kube-system
       labels:
         app.kubernetes.io/name: traefik
         helm.sh/chart: traefik-9.18.2
@@ -294,6 +300,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-dashboard
+  namespace: kube-system
   annotations:
     helm.sh/hook: "post-install,post-upgrade"
   labels:
