--- a/templates/addons/traefik2/traefik2.yml
+++ b/templates/addons/traefik2/traefik2.yml
@@ -1,4 +1,124 @@
 ---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: ingressroutes.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: IngressRoute
+    plural: ingressroutes
+    singular: ingressroute
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: middlewares.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: Middleware
+    plural: middlewares
+    singular: middleware
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: ingressroutetcps.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: IngressRouteTCP
+    plural: ingressroutetcps
+    singular: ingressroutetcp
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: ingressrouteudps.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: IngressRouteUDP
+    plural: ingressrouteudps
+    singular: ingressrouteudp
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: tlsoptions.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: TLSOption
+    plural: tlsoptions
+    singular: tlsoption
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: tlsstores.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: TLSStore
+    plural: tlsstores
+    singular: tlsstore
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: traefikservices.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: TraefikService
+    plural: traefikservices
+    singular: traefikservice
+  scope: Namespaced
+
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: serverstransports.traefik.containo.us
+
+spec:
+  group: traefik.containo.us
+  version: v1alpha1
+  names:
+    kind: ServersTransport
+    plural: serverstransports
+    singular: serverstransport
+  scope: Namespaced
+
+---
 # Source: traefik/templates/rbac/serviceaccount.yaml
 kind: ServiceAccount
 apiVersion: v1
@@ -233,22 +353,7 @@ spec:
           - name: ssl
             mountPath: /ssl
         args:
-          #- --configfile=/config/traefik.toml
-          - "--api.insecure"
-          - "--api.dashboard=true"
-          - "--accesslog"
-          - --certificatesresolvers.myresolver.acme.tlschallenge
-          - --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
-          - --certificatesresolvers.myresolver.acme.email=minnaker@armory.io
-          - --certificatesresolvers.myresolver.acme.storage=acme.json
-          - "--entryPoints.http.address=:80/tcp"
-          - "--entryPoints.https.address=:443/tcp"
-          - "--entryPoints.traefik.address=:9000/tcp"
-          - "--global.checknewversion"
-          - "--log.level=INFO"
-          - "--ping=true"
-          - "--providers.kubernetescrd"
-          - "--providers.kubernetesingress"
+          - --configfile=/config/traefik.yml
       volumes:
         - name: data
           emptyDir: {}
@@ -258,10 +363,10 @@ spec:
           configMap:
             defaultMode: 420
             name: traefik
-      - name: ssl
-        secret:
-          defaultMode: 420
-          secretName: traefik-default-cert
+        - name: ssl
+          secret:
+            defaultMode: 420
+            secretName: traefik-default-cert
       securityContext:
         fsGroup: 65532
 ---
