--- a/templates/addons/traefik2/traefik2.yml
+++ b/templates/addons/traefik2/traefik2.yml
@@ -205,6 +205,69 @@ subjects:
     name: traefik
     namespace: kube-system
 ---
+# Source: custom
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: traefik
+  namespace: kube-system
+  labels:
+    app.kubernetes.io/name: traefik
+    app.kubernetes.io/instance: traefik
+data:
+  traefik.yml: |
+    global:
+      checkNewVersion: true
+    accessLog: {}
+    api:
+      dashboard: true
+    log:
+      level: INFO
+      format: common
+    entryPoints:
+      http:
+        address: ":8000"
+      https:
+        address: ":8443"
+      metrics:
+        address: ":8100"
+      traefik:
+        address: ":9000"
+    certificatesResolvers:
+      lestaging:
+        acme:
+          caserver: https://acme-staging-v02.api.letsencrypt.org/directory
+          email: minnaker@armory.io
+          storage: /data/acme-staging.json
+          tlsChallenge: {}
+      leprod:
+        acme:
+          caserver: https://acme-v02.api.letsencrypt.org/directory
+          email: minnaker@armory.io
+          storage: /data/acme.json
+          tlsChallenge: {}
+    tls:
+      certificates:
+        - certFile: /data/tls.crt
+          keyFile: /data/tls.key
+      options:
+        default:
+          minVersion: VersionTLS12
+        mintls13:
+          minVersion: VersionTLS13
+    metrics:
+      prometheus:
+        entrypoint: metrics
+    ping: {}
+    providers:
+      file:
+        directory: /dynconfig
+        watch: true
+      kubernetesCRD: {}
+      kubernetesIngress:
+        ingressEndpoint:
+          publishedService: "kube-system/traefik"
+---
 # Source: traefik/templates/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
@@ -293,6 +356,8 @@ spec:
             mountPath: /tmp
           - name: config
             mountPath: /config
+          - name: dynconfig
+            mountPath: /dynconfig
         args:
           - --configfile=/config/traefik.yml
       volumes:
@@ -304,6 +369,9 @@ spec:
           configMap:
             defaultMode: 420
             name: traefik
+        - name: dynconfig
+          configMap:
+            name: traefik-dyn
       securityContext:
         fsGroup: 65532
 ---
